<resources>
    <string name="app_name">WildFire</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="launcher_icon_description">Splash Screen Icon</string>
    <string name="title_activity_choose_user">ChooseUserActivity</string>
    <string name="text_view_victim">   Victim</string>
    <string name="text_view_family">   Family</string>
    <string name="text_view_volunteer">Volunteer</string>
    <string name="title_activity_victim">VictimActivity</string>
    <string name="title_activity_family">FamilyActivity</string>
    <string name="title_activity_volunteer">VolunteerActivity</string>
    <string name="text_view_location">Finding you ....</string>
    <string name="text_view_location_input">Enter Victim\'s Location</string>
    <string name="edit_text_location">E.g. India</string>
    <string name="text_view_name_input">Enter Victim\'s Name</string>
    <string name="edit_text_name">Name</string>
    <string name="text_view_age_input">Enter Age</string>
    <string name="edit_text_age">20</string>
    <string name="button_close">Close</string>
    <string name="text_view_default">--</string>
    <string name="text_view_emergency_title">Emergency Contacts</string>
    <string name="text_view_ambulance">Ambulance : </string>
    <string name="text_view_fire">Fire : </string>
    <string name="text_view_police">Police : </string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="button_provide_assistance">Provide Assistance</string>
    <string name="button_view_related_articles">View Related Articles</string>
    <string name="title_activity_provide_assistance">ProvideAssistanceActivity</string>
    <string name="button_circulate_message">Circulate Message</string>
    <string name="title_activity_circulate_message">CirculateMessageActivity</string>
    <string name="text_view_choose_activity_title">Find Help</string>
    <string name="text_view_helpline">Helpline</string>
    <string name="text_view_provide_assistance_title">Provide Assistance</string>
    <string name="text_view_spread">Spread</string>
    <string name="text_view_family_title">Initiate WildFire</string>
    <string name="title_activity_job">JobActivity</string>
    <string name="text_view_jobs">Jobs</string>
    <string name="text_view_volunteer_titte">Volunteer</string>
    <string name="text_view_label">Enter Desired Location</string>
    <string name="text_view_jobs_title">Find Jobs</string>
    <string name="text_view_search">Search</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="text_view_about_us">About Us</string>
    <string name="wildfire_title">What is WildFire?</string>
    <string name="api_title">What are the APIs used?</string>
</resources>
