<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bitshifter.wildfire.FamilyActivity"
    >

    <Toolbar
        android:id="@+id/activity_transition_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:transitionName="holder1"
        android:minHeight="50dp"
        android:elevation="10dp" />

    <Button
        android:id="@+id/bWebView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view_related_articles"
        android:background="@color/primary"
        android:textColor="@color/icons"
        android:visibility="invisible"
        android:layout_above="@+id/fab_button"
        android:layout_marginBottom="20dp"
        android:elevation="@dimen/button_elevation"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/fab_button"
        android:transitionName="fab"
        android:layout_width="@dimen/float_button_size"
        android:layout_height="@dimen/float_button_size"
        android:background="@drawable/ripple_round"
        android:stateListAnimator="@anim/fab_anim"
        android:elevation="@dimen/button_elevation"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:drawableEnd="@drawable/send"
        android:layout_marginBottom="30dp"
        android:onClick="onFabClick"
        />

    <LinearLayout
        android:id="@+id/ll_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_transition_header"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_marginTop="20dp"
            android:scaleX="0"
            android:scaleY="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_view_location_input"
            android:textColor="@color/primary_text" />

        <EditText
            android:id="@+id/etLocation"
            android:scaleX="0"
            android:scaleY="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/edit_text_location"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:scaleX="0"
            android:scaleY="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_view_name_input"
            android:textColor="@color/primary_text"
            />

        <EditText
            android:id="@+id/etName"
            android:scaleX="0"
            android:scaleY="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/edit_text_name"
            android:ems="10"
            />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_marginTop="20dp"
            android:scaleX="0"
            android:scaleY="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary_text"
            android:text="Phone Number"
            />

        <EditText
            android:id="@+id/etPhone"
            android:scaleX="0"
            android:scaleY="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="+919903207591"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvFamilyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_family_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/icons"
        android:textSize="28sp"
        android:elevation="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_spread"
        android:id="@+id/textView2"
        android:textColor="@color/primary_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivTitle"
        android:background="@drawable/top_icon"
        android:layout_marginEnd="26dp"
        android:cropToPadding="false"
        android:elevation="10dp"
        android:layout_alignTop="@+id/tvFamilyTitle"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
