<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bitshifter.wildfire.JobActivity"
    android:elevation="@dimen/bar_elevation">

    <Toolbar
        android:id="@+id/activity_transition_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:transitionName="holder1"
        android:minHeight="50dp"
        android:elevation="@dimen/bar_elevation" />

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_label"
        android:layout_below="@+id/activity_transition_header"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/primary_text"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/etJobCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLabel"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/edit_text_location"
        />

    <Button
        android:id="@+id/fab_button"
        android:transitionName="fab"
        android:layout_width="@dimen/float_button_size"
        android:layout_height="@dimen/float_button_size"
        android:background="@drawable/ripple_round"
        android:stateListAnimator="@anim/fab_anim"
        android:elevation="@dimen/button_elevation"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:drawableEnd="@drawable/search"
        android:layout_marginBottom="80dp"
        android:layout_above="@+id/textView2"
        android:onClick="submitForm"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_search"
        android:id="@+id/textView2"
        android:textColor="@color/primary_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:id="@+id/tvFamilyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_jobs_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/icons"
        android:textSize="28sp"
        android:elevation="@dimen/bar_elevation" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivTitle"
        android:background="@drawable/top_icon"
        android:layout_marginEnd="24dp"
        android:cropToPadding="false"
        android:elevation="@dimen/bar_elevation"
        android:layout_alignTop="@+id/tvFamilyTitle"
        android:layout_alignParentEnd="true" />




</RelativeLayout>
