<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bitshifter.wildfire.ProvideAssistanceActivity"
    android:id="@+id/assistanceMasterLayout"
    >

    <Toolbar
        android:id="@+id/activity_transition_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:transitionName="holder1"
        android:minHeight="50dp"
        android:elevation="10dp" />

    <Button
        android:id="@+id/fab_button"
        android:transitionName="fab"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/ripple_round"
        android:stateListAnimator="@anim/fab_anim"
        android:elevation="@dimen/button_elevation"
        android:layout_marginBottom="30dp"
        android:drawableEnd="@drawable/phone"
        android:onClick="onFabClick"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/marker"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/activity_transition_header"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvLocation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_location"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvCountry1"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/tvLocation1"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/bWebView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view_related_articles"
        android:background="@color/primary"
        android:textColor="@color/icons"
        android:layout_above="@+id/fab_button"
        android:layout_centerHorizontal="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_provide_assistance_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:id="@+id/tvAssistanceTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/icons"
        android:textSize="28sp"
        android:elevation="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_helpline"
        android:id="@+id/textView2"
        android:textColor="@color/primary_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvCordinates1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/tvCountry1"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivTitle"
        android:background="@drawable/top_icon"
        android:layout_marginEnd="24dp"
        android:cropToPadding="false"
        android:elevation="10dp"
        android:layout_alignTop="@+id/tvAssistanceTitle"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
