<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bitshifter.wildfire.AboutUsActivity">

    <Toolbar
        android:id="@+id/activity_transition_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:transitionName="holder1"
        android:minHeight="50dp"
        android:elevation="@dimen/bar_elevation"
        />

    <TextView
        android:id="@+id/tvAboutUsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_family_title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/icons"
        android:textSize="28sp"
        android:elevation="@dimen/bar_elevation" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivTitle"
        android:background="@drawable/top_icon"
        android:layout_marginEnd="26dp"
        android:cropToPadding="false"
        android:elevation="@dimen/bar_elevation"
        android:layout_alignTop="@+id/tvAboutUsTitle"
        android:layout_alignParentEnd="true" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_transition_header"
        android:fadeScrollbars="true"
        android:padding="20dp"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wildfire_title"
                android:textSize="24sp"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvWildFireBody"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api_title"
                android:textSize="24sp"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAPIBody"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
