<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bitshifter.wildfire.ChooseUserActivity">

    <View
        android:id="@+id/activity_transition_header"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:transitionName="holder1"
        android:background="?android:colorPrimary"
        android:elevation="30dp" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="onVictimClick"
        android:layout_below="@+id/activity_transition_header"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp">

        <Button
            android:id="@+id/fb_victim"
            android:layout_marginStart="30dp"
            android:layout_width="@dimen/float_button_size"
            android:layout_height="@dimen/float_button_size"
            android:elevation="@dimen/button_elevation"
            android:background="@drawable/ripple_round"
            android:stateListAnimator="@anim/fab_anim"
            android:drawableTop="@drawable/victim"
            android:padding="10dp"
            android:layout_gravity="center"
            android:onClick="onVictimClick"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_victim"
            android:padding="20dp"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="onFamilyClick"
        android:layout_below="@+id/ll1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp">

        <Button
            android:id="@+id/fb_family"
            android:layout_marginStart="30dp"
            android:layout_width="@dimen/float_button_size"
            android:layout_height="@dimen/float_button_size"
            android:elevation="@dimen/button_elevation"
            android:background="@drawable/ripple_round"
            android:stateListAnimator="@anim/fab_anim"
            android:drawableTop="@drawable/family"
            android:padding="10dp"
            android:onClick="onFamilyClick"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/text_view_family"
            android:textSize="24sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="onVolunteerClick"
        android:layout_marginBottom="43dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/fb_volunteer"
            android:layout_marginStart="30dp"
            android:layout_width="@dimen/float_button_size"
            android:layout_height="@dimen/float_button_size"
            android:elevation="@dimen/button_elevation"
            android:background="@drawable/ripple_round"
            android:stateListAnimator="@anim/fab_anim"
            android:drawableTop="@drawable/volunteer"
            android:padding="10dp"
            android:layout_gravity="center"
            android:onClick="onVolunteerClick"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/text_view_volunteer"
            android:textSize="24sp"
            />

    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Who are you?"
        android:textColor="@color/icons"
        android:textSize="42sp"
        android:elevation="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <TextView
        android:id="@+id/tvAboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_view_about_us"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="openAboutUs"
        />

</RelativeLayout>
